fix: change sillytavern categories to "Network;Chat"
Co-authored-by: Andrew Morgan <1342360+anoadragon453@users.noreply.github.com>

--- a/pkgs/by-name/si/sillytavern/sillytavern.desktop
+++ b/pkgs/by-name/si/sillytavern/sillytavern.desktop
@@ -5,5 +5,5 @@ Name=SillyTavern
 Exec=sillytavern
 Terminal=true
 Hidden=false
-Categories=Education
+Categories=Network;Chat
 Comment="LLM Frontend for Power Users"
